--- a/redux-mf-project/store/package.json
+++ b/redux-mf-project/store/package.json
@@ -31,7 +31,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2"
   }
 }
