[FIX] rename to mf-character-detail to avoid upperCase in Docker and fix files to run Docker

--- a/apiRickMorty-mf-project/docker-compose.yml
+++ b/apiRickMorty-mf-project/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     # para construir la aplicación en el path que coloquemos pero en vez de eso vamos a definir un contexto
     build:
       # este context es para definir a partir de qué carpeta vamos a empezar a trabajar
-      context: ./host-app
+      context: host-app
       dockerfile: ./Dockerfile
     # definir puertos
     ports:
@@ -18,28 +18,28 @@ services:
       - mf_navbar
       - mf_counter
       - mf_cards
-      - mf_characterDetail
+      - mf_character_detail
   mf_navbar:
     build:
-      context: ./mf-navbar
+      context: mf-navbar
       dockerfile: ./Dockerfile
     ports:
       - "8081:8081"
   mf_counter:
     build:
-      context: ./mf-counter
+      context: mf-counter
       dockerfile: ./Dockerfile
     ports:
       - "8082:8082"
   mf_cards:
     build:
-      context: ./mf-cards
+      context: mf-cards
       dockerfile: ./Dockerfile
     ports:
       - "8083:8083"
-  mf_characterDetail:
+  mf_character_detail:
     build:
-      context: ./mf-characterDetail
+      context: mf-character-detail
       dockerfile: ./Dockerfile
     ports:
       - "8084:8084"
