--- a/apiRickMorty-mf-project/host-app/package.json
+++ b/apiRickMorty-mf-project/host-app/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
+    "http-server": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2"
