--- a/apiRickMorty-mf-project/mf-character-detail/package.json
+++ b/apiRickMorty-mf-project/mf-character-detail/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mf-characterDetail",
+  "name": "mf-character-detail",
   "version": "1.0.0",
   "scripts": {
     "build": "webpack --mode production",
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
+    "http-server": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2"
